--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 .b {
 	font-weight: 520;
-	font-size: 17px;
+	font-size: 18px;
 	display: flex;
 	justify-content: space-around;
 }
@@ -93,8 +93,11 @@ header {
 	background-image: linear-gradient(to bottom left, #b7f7da, #f7ebf7, #f2b8f2);
 }
 .lang-choose {
-	padding-bottom: 8%;
+	padding-bottom: 6%;
 	background-image: linear-gradient(to bottom right, #f2b8f2, #f7ebf7, #b7f7da);
+}
+.reg	{	
+	background-image: linear-gradient(to bottom left, #b7f7da, #f7ebf7, #f2b8f2);
 }
 label {
 	font-weight: 600;
@@ -103,6 +106,103 @@ label {
 label:hover {
 	--bs-btn-color: #85afed;
 }
+
+
+.testl {
+	background-color: #aa82fa;
+	border-radius: 10px;
+	width: 168px;
+	height: 35px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: 0.6s;
+}
+.testl:hover {
+	border-radius: 16px;
+}
+.test {
+	margin-bottom: 1.5%;
+	background-color: #905afc; 
+	border-radius: 22px; 
+	width: 322px; 
+	height: 42px;
+	/*position: absolute;
+	visibility: hidden;
+	margin-left: 17%;*/
+	transition: 0.6s;
+	font-size: 19px;
+	font-weight: 600;
+	color: #eee;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+}
+.test:hover {
+	transform: scale(1.02);
+}
 .mb-3 {
 	box-shadow: 0 0 15px 2px #bfbfbf;
+	background-color: #f8f8fa;
 }
+.g-0 {
+	height: auto;
+}
+
+.place {
+	font-weight: 600;
+	font-size: 17.7px;
+	border-radius: 14px;
+	width: 315px;
+	height: 41.8px;
+	margin-top: 18px;
+}
+.conf {
+	margin-top: 21.5px;
+	margin-bottom: 1.5%;
+	background-color: #905afc; 
+	border-radius: 22px; 
+	width: 322px; 
+	height: 42px;
+	transition: 0.6s;
+	font-size: 19px;
+	font-weight: 600;
+	color: #eee;
+}
+
+.conf:hover {
+	transform: scale(1.02);
+}
+
+.finles {
+	width: 82%;
+	height: 45px;
+	font-size: 20px;
+	border-radius: 20px;
+	border: 4px;
+	border-color: blueviolet;
+}
+
+
+
+
+
+
+/*
+.toggler { 
+		visibility: hidden;
+		position: absolute;
+    width: 200px; 
+    height: 200px; 
+  }
+  #effect { 
+    width: 240px; 
+    height: 170px; 
+    padding: 0.4em; 
+  }
+  #effect h3 { 
+    margin: 0; 
+    padding: 0.4em; 
+    text-align: center; 
+  }*/
