--- a/style.css
+++ b/style.css
@@ -151,7 +151,6 @@ label:hover {
 }
 
 .place {
-	font-weight: 600;
 	font-size: 17.7px;
 	border-radius: 14px;
 	width: 315px;
@@ -178,15 +177,33 @@ label:hover {
 .finles {
 	width: 82%;
 	height: 45px;
-	font-size: 20px;
+	font-size: auto;
+	border-width: 2px;
 	border-radius: 20px;
-	border: 4px;
-	border-color: blueviolet;
+}
+.testf {
+	margin-top: -3%;
+	background-color: #f3bff3; 
+	border-radius: 20px; 
+	width: 265px; 
+	height: 43px;
+	position: absolute;
+	transition: 0.6s;
+	font-size: 17px;
+	font-weight: 600;
+	color: #5a5e62;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
 }
 
-
-
-
+.bnm {
+	transition: 0.5s;
+}
+.bnm:hover {
+	transform: scale(1.02);
+}
 
 
 /*
